Initialize tracekit workspace with core components, including cache simulation toolkit, workload generators, and CLI tools. Add support for various trace formats and benchmark metrics. Update CI workflows for workspace compatibility.

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Run benchmarks
-        run: cargo bench --no-fail-fast | tee bench-output.txt
+        run: cargo bench --workspace --no-fail-fast | tee bench-output.txt
 
       - name: Upload benchmark output
         uses: actions/upload-artifact@v6
