--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           components: clippy
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
   # Build and test on multiple platforms
   test:
@@ -53,9 +53,9 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
       - uses: Swatinem/rust-cache@v2
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --workspace --verbose
       - name: Run tests
-        run: cargo test --all-features --all-targets
+        run: cargo test --workspace --all-features --all-targets
 
   # Documentation build check
   docs:
@@ -68,7 +68,7 @@ jobs:
           toolchain: stable
       - uses: Swatinem/rust-cache@v2
       - name: Build documentation
-        run: cargo doc --no-deps --all-features
+        run: cargo doc --workspace --no-deps --all-features
         env:
           RUSTDOCFLAGS: -Dwarnings
 
@@ -93,4 +93,4 @@ jobs:
           toolchain: 1.85.0  # MSRV for Rust 2024 edition
       - uses: Swatinem/rust-cache@v2
       - name: Check MSRV
-        run: cargo check --all-features
+        run: cargo check --workspace --all-features
