--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -29,4 +29,4 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
       - uses: Swatinem/rust-cache@v2
       - name: Build and test
-        run: cargo test --all-features --all-targets
+        run: cargo test --workspace --all-features --all-targets
