--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,23 +33,26 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Format check
-        run: cargo fmt --check
+        run: cargo fmt --all --check
 
       - name: Clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
       - name: Tests
-        run: cargo test --all-features --all-targets
+        run: cargo test --workspace --all-features --all-targets
 
       - name: Docs
-        run: cargo doc --no-deps --all-features
+        run: cargo doc --workspace --no-deps --all-features
         env:
           RUSTDOCFLAGS: -Dwarnings
 
       - name: Package verification
         run: |
-          cargo package
-          cargo publish --dry-run
+          # Verify each crate can be packaged
+          cargo package --package tracekit
+          cargo package --package tracekit-formats
+          cargo package --package tracekit-cachekit
+          cargo package --package tracekit-cli
 
   release:
     name: GitHub Release
@@ -69,7 +72,18 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - name: Publish crate
+      - name: Publish crates
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish
+        run: |
+          # Publish in dependency order with delays to allow crates.io indexing
+          cargo publish --package tracekit
+          echo "Waiting for crates.io to index tracekit..."
+          sleep 30
+          
+          cargo publish --package tracekit-formats
+          cargo publish --package tracekit-cachekit
+          echo "Waiting for crates.io to index dependencies..."
+          sleep 30
+          
+          cargo publish --package tracekit-cli
