--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ target
 # Covers JetBrains IDEs: IntelliJ, GoLand, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# Ignore entire .idea directory
+.idea/
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/vcs.xml
