--- a/tracekit/Cargo.toml
+++ b/tracekit/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = { workspace = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
+tracekit-formats = { workspace = true, features = ["full"] }
 
 [[bench]]
 name = "bench"
